--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
         <div class="col-md-6 p-lg-2 pl-1 mx-auto my-5">
           <!-- <h1 class="display-4 font-weight-normal">Punny headline</h1> -->
           <img src="logo.png" alt="logo" id="logo">
+          <p id="quote">Add Value Advisors Germany</p>
           <!-- <p class="lead font-weight-normal p-4">Add Value Advisors Germany</p> -->
           <!-- <a class="btn btn-outline-secondary" href="#">Coming soon</a> -->
         </div>
